优化logger
